omg this gonna take forever :_(

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 
 <body>
@@ -66,7 +67,7 @@
                     </div>
                     <div class="blurb">
                         <div class="artwork" role="presentation"
-                            style="background-image:url(https://www.mathjax.org/img/modular.svg);"></div>
+                            style="background-image:url('img/overview.communication.jpg');"></div>
                         <h2>Social Experiment</h2>
                         <p>What I mean by a “tech CEO” is not necessarily someone who is a deep expert in the particular
                             field the startup's solution is based on, but they do need to be highly trained in a field
@@ -78,7 +79,7 @@
                     </div>
                     <div class="blurb">
                         <div class="artwork" role="presentation"
-                            style="background-image:url(https://www.mathjax.org/img/a11y.svg);"></div>
+                            style="background-image:url('img/overview.leadership.webp');"></div>
                         <h2>Tech + Leadership</h2>
                         <p>It's not just interactions with customers that matter, either. It's also about being able to
                             make well-informed decisions that affect the technical product from a business perspective
@@ -96,35 +97,42 @@
 
         <section class="row" id="docs">
             <div class="wrapper">
-                <h1>Documentation</h1>
+                <h1>Responsibilities As A CEO</h1>
                 <div class="row">
                     <div class="blurb">
                         <div class="artwork" role="presentation"
-                            style="background-image:url(https://www.mathjax.org/img/code.svg);"></div>
-                        <h2>Simple integration</h2>
-                        <p>To quick start with our CDN, <a href="#docs" type="button" aria-haspopup="true"
-                                data-html="true" data-toggle="popover" data-placement="right"
-                                data-content="<code> &amp;lt;script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'&amp;gt;&amp;lt;/script&amp;gt;</code>"
-                                data-original-title="" title="">copy this snippet</a>. You can also <a
-                                href="https://github.com/mathjax/MathJax/archive/master.zip">download a copy</a> and
-                            configure MathJax yourself.</p>
-                        <a class="button">View Samples</a>
+                            style="background-image:url('img/responsibilities.employee.jpg');"></div>
+                        <h2>I. </h2>
+                        <p> A. Setting the company's vision and mission: Articulating the company's purpose and ensuring
+                            that all employees are aligned with its goals and values.
+                            B. Building and leading a talented team: A successful startup CEO must be able to attract,
+                            retain, and motivate top talent.</p>
+                        <a class="button">Click to find out more!</a>
                     </div>
                     <div class="blurb">
                         <div class="artwork" role="presentation"
-                            style="background-image:url(https://www.mathjax.org/img/api.svg);"></div>
-                        <h2>A rich API</h2>
-                        <p>Use our extensive APIs to create interactive content, advanced authoring tools, and
-                            math-enabled web and mobile apps.</p>
-                        <a class="button">View Samples</a>
+                            style="background-image:url('img/responsibilties.funding.jpg');"></div>
+                        <h2>II. </h2>
+                        <p> A. Raising capital: Startups typically need to raise funds from investors in order to grow
+                            and
+                            scale their operations. The CEO is responsible for securing these funds and ensuring that
+                            the company has the resources it needs to succeed.
+                            B. Making strategic decisions: The CEO is the ultimate decision-maker for the company and
+                            must
+                            be able to assess risk
+                        </p>
+                        <a class="button">Click to find out more!</a>
                     </div>
                     <div class="blurb">
                         <div class="artwork" role="presentation"
-                            style="background-image:url(https://www.mathjax.org/img/browsers.svg);"></div>
-                        <h2>Works everywhere</h2>
-                        <p>MathJax generates identical, high-quality output on all browsers & platforms. Our support
-                            starts with IE 6, Firefox 3, Safari 2.</p>
-                        <a class="button">View Samples</a>
+                            style="background-image:url('img/responsibilities.partnership.jpg');"></div>
+                        <h2>III. </h2>
+                        <p> A. A startup CEO must be able to build strong relationships with key partners and stakeholders,
+                            such as customers, suppliers, and investors.
+                            B. Representing the company: The CEO is the face of the company and must be able to communicate
+                            effectively
+                        </p>
+                        <a class="button">Click to find out more!</a>
                     </div>
 
                 </div>
@@ -133,7 +141,7 @@
 
         <section class="row" id="sponsors">
             <div class="wrapper">
-                <h1>MathJax Sponsors</h1>
+                <h1>Work Environment </h1>
                 <p>We are supported by <a href="#modal-sponsorship" data-toggle="modal"
                         data-target="#modal-sponsorship">the MathJax Sponsorship Program</a> and individual donations.
                     Please <a style="border:0;" href="https://pledgie.com/campaigns/27873"><img
@@ -172,7 +180,7 @@
                     </div>
                 </div>
 
-                <h2>Partners</h2>
+                <h2>Imapcts of CEOS In Society</h2>
                 <div class="row partners">
                     <div
                         data-content="Stack Overflow is the preeminent site for programmers to find, ask, and answer questions about software development. Founded in 2008, co-founders Jeff Atwood and Joel Spolsky brought together millions of computer programmers from around the world to help each other with detailed technical questions. Based on Stack Overflow’s success, the company expanded and launched the Stack Exchange Network in August 2010. Stack Exchange currently consists of over 100 sites and and more than 3 million active users. For more information, please visit <a href='http://www.stackexchange.com/about'>www.stackexchange.com/about</a>.">
@@ -257,7 +265,7 @@
 
         <section class="row" id="contact">
             <div class="wrapper">
-                <h1>Contact us</h1>
+                <h1>Degrees & Skill Needed </h1>
                 <div class="row">
                     <div class="blurb">
                         <div class="artwork" role="presentation"
@@ -291,7 +299,7 @@
 
         <section class="row" id="about">
             <div class="wrapper">
-                <h1>About us</h1>
+                <h1>Subjects & Places of Education</h1>
                 <p>The MathJax Consortium is a joint venture of the <a href="http://www.ams.org">American Mathematical
                         Society</a> (AMS) and the <a href="http://www.siam.org">Society for Industrial and Applied
                         Mathematics</a> (SIAM) to advance mathematical and scientific
