i think im done - let me check

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p class="margin-top-10">
                 <ul>
 
-                    <li>Responsibilities as a Tech CEO: Setting the company's vision and mission: Articulating the
+                    <li class="pretty-font">Responsibilities as a Tech CEO: Setting the company's vision and mission: Articulating the
                         company's purpose and ensuring that all employees are aligned with its goals and values.
                         Building and leading a talented team: A successful startup CEO must be able to attract, retain,
                         and motivate top talent.
@@ -81,7 +81,7 @@
 
                     </li>
 
-                    <li>Work Environment: What are the chief executives actually doing with their day?
+                    <li class="pretty-font">Work Environment: What are the chief executives actually doing with their day?
                         The study found that a CEO's work is diverse: 25 percent of their work is spent on people and
                         relationships, 25 percent on functional and business unit reviews, 16 percent on organization
                         and culture, and 21 percent on strategy. Only 3 percent of their work is spent on professional
@@ -98,7 +98,7 @@
 
                     </li>
 
-                    <li>Our Impact on Society: Today's challenges, from the pandemic to ESG to ongoing efforts to
+                    <li class="pretty-font">Our Impact on Society: Today's challenges, from the pandemic to ESG to ongoing efforts to
                         address racial inequity, have only woven business and society more tightly together. Indeed, 86%
                         of CEOs and board members see business and society becoming more interconnected, and two thirds
                         of the American public want CEOs to take a stand on social issues.
@@ -116,9 +116,8 @@
                         <img src="img/salary of ceo.jpg" alt="Salary of CEO">
                         <div class="overlay">
                             <div class="text">According to Forbes, CEO pay has skyrocketed in recent decades: CEO
-                                compensation rose 1,322.2% from 1978 to 2020 adjusted for inflation, compared to an 18%
-                                increase in worker compensation, according to an Economic Policy Institute analysis
-                                released last year.</div>
+                                compensation rose 1,322.2% from 1978 to 2020 adjusted for inflation according to an
+                                Economic Policy Institute analysis released last year.</div>
                         </div>
                     </div>
                 </div>
@@ -128,8 +127,7 @@
                         <div class="overlay">
                             <div class="text">According to HR Future, CEOs are known to be frequent travellers, whether
                                 that be overseas or across regions – they often must travel to a variety of locations
-                                for the sake of business. Travel in any capacity can be very time-consuming and may feel
-                                like a complete waste of time as you wait to arrive at your destinations.</div>
+                                for the sake of business.</div>
                         </div>
                     </div>
                 </div>
